# portfolio-scraper

./: README.md  main.py  pyproject.toml
app/: app.py  utils.py
app/pages/: analysis.py  portfolio.py
assets/: ISO10383_MIC.csv
portfolio_scraper/: __init__.py  portfolio_analysis.py
portfolio_scraper/etf/: __init__.py  base.py
portfolio_scraper/etf/amundi/: __init__.py  it.py
portfolio_scraper/etf/ishares/: base.py  it.py
portfolio_scraper/etf/vanguard/: base.py  it.py
portfolio_scraper/etf/xtrackers/: base.py  it.py
portfolio_scraper/utils/: asset_class.py  country.py  dataframe.py  exchange.py  sector.py
scrapers/: base.py
scrapers/ishares/: __init__.py  base.py  it.py
scrapers/vanguard/: __init__.py  base.py  it.py
scrapers/xtrackers/: __init__.py  base.py  it.py
tests/: countries.py  generic.py  test_portfolio_analysis.py  test_scraping.py
utils/: asset_class.py  country.py  dataframe.py  exchange.py  sector.py
